# LuinuxCPU_Emulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  assembler.cpp  data_table.cpp  luinux_asm.cpp  luinuxcpu.cpp  processor.cpp  register_table.cpp
src/inc/: assembler.h  common.h  instruction_impl.h  memory.h  opcode.h  processor.h  register.h  utils.h
test/: CMakeLists.txt  test_alu_flags.cpp  test_assembler.cpp  test_division.cpp  test_memory.cpp  test_opcode.cpp  test_processor.cpp  test_register.cpp  test_signed_mul_div.cpp  test_smul_sdiv_variants.cpp
test/test_program/: loop.txt  luinuxcpu_test.txt  operand_combinations.txt  set_test.txt
tools/: generate_opcodes.py  instructions_full.csv
